fix: hero video on Safari && hero padding

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -159,7 +159,7 @@ div:has(.community-container) > .container {
 
 @media screen and (max-width: 930px) {
   .mdx-hero {
-    margin-bottom: 280px;
+    margin-bottom: 500px;
   }
 
   .mdx-hero > .mdx-hero-asset video {
@@ -171,7 +171,7 @@ div:has(.community-container) > .container {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .mdx-hero {
     margin-bottom: 100px;
   }
@@ -179,10 +179,10 @@ div:has(.community-container) > .container {
 
 @media screen and (max-width: 500px) {
   .mdx-hero {
-    margin-bottom: -20px;
+    margin-bottom: 20px;
   }
 
   .mdx-hero > .mdx-hero-asset video {
-    margin-top: -5%;
+    margin-bottom: 0;
   }
 }
